<resources>
    <string name="app_name">Gaming Days</string>
    <string name="hint_email">Inserisci una email</string>
    <string name="hint_password">Inserisci la password</string>
    <string name="action_log_in">Log In</string>
    <string name="toast_generic_confirmation">Operazione completata</string>
    <string name="hint_user">Inserisci un nome per la visualizzaizone</string>
    <string name="action_register">Registrati</string>
    <string name="alert_password">La password è troppo corta. Il minimo è 6 caratteri!</string>
    <string name="toast_generic_error">Si è verificato un errore.</string>
    <string name="action_logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="action_confirm">Ci sarò!</string>
    <string name="action_not_confirm">Non ci posso essere…</string>
    <string name="no_one">Conferma la tua presenza per primo!</string>
    <string name="confirm_thankyou">Grazie per aver confermato la tua presenza!</string>
    <string name="confirm_goodbye">È un peccato che tu non ci sia…</string>
    <string name="confirm_already_confirmed">Hai già dato conferma di partecipazione</string>
    <string name="confirm_already_not_confirmed">Hai già dato conferma di non partecipazione</string>
    <string name="hint_date">Data</string>
    <string name="hint_title">Titolo evento</string>
    <string name="hint_image_url">URL dell\'immagine</string>
    <string name="hint_description">Descrizione</string>
    <string name="action_edit">Modifica</string>
    <string name="hint_remove_all">Resetta partecipanti</string>
    <string name="hint_new_message">Scrivi un messaggio</string>
    <string name="action_chat">Chat</string>
</resources>
