<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/loading"
        android:textAlignment="textEnd" />
    <TextView
        android:layout_below="@+id/date"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/image"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/loading"
        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

    <LinearLayout
        android:layout_below="@+id/name"
        android:id="@+id/confirm_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_weight="1"
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:src="@drawable/thumb_up"
            android:onClick="doConfirm"/>

        <ImageView
            android:layout_weight="1"
            android:id="@+id/not_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:src="@drawable/thumb_down"
            android:onClick="doNotConfirm" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirmed_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_section"
        android:padding="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/no_one"
        android:textAppearance="@android:style/TextAppearance.Material.Body2" />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:onClick="doLogout"
        android:text="@string/action_logout"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>